test/conformance/chainsaw/validate/namespaced-admission-scope/crds.yaml
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: parameters.cluster.admission-scope.kyverno.test
spec:
  group: cluster.admission-scope.kyverno.test
  scope: Cluster
  names:
    plural: parameters
    singular: parameter
    kind: ScopeParameter
  versions:
  - name: v1
    served: true
    storage: true
    schema:
      openAPIV3Schema:
        type: object
        properties:
          spec:
            type: object
            x-kubernetes-preserve-unknown-fields: true
  - name: v1beta1
    served: true
    storage: false
    schema:
      openAPIV3Schema:
        type: object
        properties:
          spec:
            type: object
            x-kubernetes-preserve-unknown-fields: true
---
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: parameters.tenant.admission-scope.kyverno.test
spec:
  group: tenant.admission-scope.kyverno.test
  scope: Namespaced
  names:
    plural: parameters
    singular: parameter
    kind: ScopeParameter
  versions:
  - name: v1
    served: true
    storage: true
    schema:
      openAPIV3Schema:
        type: object
        properties:
          spec:
            type: object
            x-kubernetes-preserve-unknown-fields: true
  - name: v1beta1
    served: true
    storage: false
    schema:
      openAPIV3Schema:
        type: object
        properties:
          spec:
            type: object
            x-kubernetes-preserve-unknown-fields: true
