test/conformance/chainsaw/validate/namespaced-admission-scope/crds-assert.yaml
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: parameters.cluster.admission-scope.kyverno.test
status:
  conditions:
  - type: Established
    status: 'True'
---
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: parameters.tenant.admission-scope.kyverno.test
status:
  conditions:
  - type: Established
    status: 'True'
